keep track of text identifiers